Fixed generation to prevent overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .main {
-    background-color: #141414;
+    background-color: #292929;
     position: fixed;
     top: 0;
     left: 0;
